<resources>
    <string name="app_name">Masarif</string>
    <string name="name">Transaction name</string>
    <string name="date">Transaction Date</string>
    <string name="details">Details</string>
    <string name="amount">Amount</string>
    <string name="add_new_payment">Add new payment</string>
    <string name="add">Add</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">don\'t have an account</string>
    <string name="show_pwd">Show Password</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="prompt_user">User name</string>
    <string name="hide_pwd" translatable="false">Hide Password</string>
    <string name="register_text">Welcome</string>
    <string name="fullName">Full name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">PAssword confirmation</string>
</resources>
