<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context=".register.RegisterActivity">



    <TextView
        android:id="@+id/login_text"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:layout_gravity="center"
        android:text = "@string/register_text"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary" />

    <!--  Name Label -->
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop = "60dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/avatar"
        android:drawablePadding="8dp"
        android:hint="@string/fullName"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/key"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />



    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/key"
        android:drawablePadding="8dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true" />



    <!-- Signup Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_form"
        android:text="@string/register"
        android:textColor="@android:color/white" />






</LinearLayout>